--- a/src/account/templates/account/parts/sidebar.html
+++ b/src/account/templates/account/parts/sidebar.html
@@ -22,19 +22,19 @@
     <!-- Sidebar Navigation -->
     <div class="list-group list-group-border-0 g-mb-40">
         <a href="{% url 'account:profile_overall' %}"
-           class="list-group-item justify-content-between {% active_link 'account:profile_overall' %}">
+           class="list-group-item list-group-item-action justify-content-between {% active_link 'account:profile_overall' %}">
             <span><i class="icon-settings g-pos-rel g-top-1 g-mr-8"></i> Settings</span>
         </a>
         <a href="{% url 'book:rent-create' %}"
-           class="list-group-item justify-content-between {% active_link 'book:rent-create' %}">
+           class="list-group-item list-group-item-action justify-content-between {% active_link 'book:rent-create' %}">
             <span><i class="icon-settings g-pos-rel g-top-1 g-mr-8"></i> Rent Book</span>
         </a>
         <a href="{% url 'book:rents' %}"
-           class="list-group-item justify-content-between {% active_link 'book:rents' %}">
+           class="list-group-item list-group-item-action justify-content-between {% active_link 'book:rents' %}">
             <span><i class="icon-settings g-pos-rel g-top-1 g-mr-8"></i> Rent Billing List</span>
         </a>
         <a href="{% url 'book:rents-table' %}"
-           class="list-group-item justify-content-between {% active_link 'book:rents-table' %}">
+           class="list-group-item list-group-item-action justify-content-between {% active_link 'book:rents-table' %}">
             <span><i class="icon-settings g-pos-rel g-top-1 g-mr-8"></i> Rent List</span>
         </a>
         <a href="{% url 'logout' %}"
